# actix-startup-dev-application

./: .env.example  .gitignore  README.md  cargo.toml  docker-compose.yml
api/: Cargo.toml
api/src/: main.rs
api/src/routes/: health.rs
core/: Cargo.toml
core/src/: lib.rs
infrastructure/: Cargo.toml
infrastructure/src/database/: mod.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/config/: database.rs  mod.rs  tests.rs
shared/src/constant/: mod.rs
shared/src/error/: mod.rs
shared/src/utils/: mod.rs
