[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
app_core = { path = "../core" }
infrastructure = { path = "../infrastructure" }
actix-web = { workspace = true }
actix-cors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
dotenv = { workspace = true }
